--- a/index.html
+++ b/index.html
@@ -5,7 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rose RAT | Online GUI</title>
-    <script src="https://replit.com/@toopicogaming/Rose-RAT#guisocket.js"></script>
+    <script>
+        socket= new WebSocket('ws://'+window.location.host+':5000');
+        socket.onopen= function() {
+            socket.send('hello');
+            console.log('sent hello');
+        };
+        socket.onmessage= function(s) {
+            alert('got reply '+s);
+        };
+    </script>
 </head>
 <body>
     
