--- a/index.html
+++ b/index.html
@@ -4,17 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rose RAT | Online GUI</title>
-    <script>
-        socket= new WebSocket('wss://'+window.location.host);
-        socket.onopen= function() {
-            socket.send('hello');
-            console.log('sent hello');
-        };
-        socket.onmessage= function(s) {
-            alert('got reply '+s);
-        };
-    </script>
+    <title>Rose RAT</title>
 </head>
 <body>
     
